added info about me

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="col col-sm-8">
             <p class="lead">Pong clone written in JavaScript.</p>
             <div class="project-summary">
-                <p>...</p>
+                <p>This is my first game that I created over the summer. It was to get me started on understanding how games work and just get to know the basics of building a game. The code wasn't the tidiest since it was my first game but it still definitely works. PongJS has both a single-player mode and a head-to-head mode. In the single-player mode, I added four levels of difficulty. The hardest is the <i>insane</i> difficulty. I coded the computer player to predict where the ball go right after the player hits the balls. There's one sure way to beat it (see if you can figure it out). To control the paddles, the "w" and "s" keys control the left paddle and the up and down arrows control the right paddle. To select an option within the menu system, press the enter/return key and you can press escape to pause the game.</p>
 
             </div>
             <p class="project-links">
@@ -70,7 +70,7 @@
         <div class="col col-sm-8">
             <p class="lead">Flappy Bird clone written in JavaScript.</p>
             <div class="project-summary">
-                <p>...</p>
+                <p>My second game is basically a rip-off version of the original Flappy Bird. Even though I had more experience this time, Flappy Birdy took me a bit longer than my previous PongJS game since it has more colorful graphics. I incorporated sounds into this game as well. I made the game available to play on mobile, too, by allowing touch input. The point of Flappy Birdy is to survive for as long as possible by avoiding the green pipes and try to get a new high score by passing between the pipes to score points. Press the spacebar to fly up. You aren't allowed to pass the top border and you'll lose if you fall to low. There are power-up cubes that will give you one extra point when you pass through the pipes for 5 seconds. You can also pause the game if you press escape.</p>
 
             </div>
             <p class="project-links">
@@ -94,7 +94,8 @@
         <div class="col col-sm-8">
             <p class="lead">My own shooter game written in JavaScript.</p>
             <div class="project-summary">
-                <p>...</p>
+                <p>Shooter Camera is my third game and the one that I'm currently working on. It's also my first game that isn't a clone of another game. In Shooter Camera, you get to move a guy around and the goal is to stay alive for as long as possible while various shapes (soon to be bad guys) try to chase you down. To defend yourself, press the spacebar to shoot the gun that you're holding, but you can also switch weapons by pressing the keys "1", "2", "3", "4", or "5". There are bullet crates that you can get in case you run out of ammo and also powercubes that give you different kinds of power-ups for a specified amount of time.</p>
+                <p>It's a work in progress, and I do plan to add touch controls so it can eventually be played on a phone/tablet.</p>
 
             </div>
             <p class="project-links">
