--- a/about.html
+++ b/about.html
@@ -32,25 +32,32 @@
     <h2>About</h2>
     <div class="row">
         <div class="col-md-8" style="margin-bottom: 20px;">
-            <p>Hello! My name is Dao Nhat Nam.</p>
+            <p>Hello! My name is Dao Nhat Nam. I'm an 8th grade student and I study in Hanoi at Sinapore International School. I'm currently living with my parents and my younger brother; I also have an older brother, but he's already studying at the US. This is a small website for me to share my coding pogress and let people know a bit more about me as I prepare to start my own journey abroad.</p>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <h3>I like...</h3>
                     <ul>
                         <li>coding</li>
+                        <li>reading</li> 
+                        <li>cardistry</li>
+                        <li>performing magic</li>
+                        <li>Taekwondo</li>
+                        <li>ping pong</li>
+                        <li>games</li>
+                        <li>eating</li>                        
+                    </ul>
+                    
+                </div>
+                <div class="col-sm-6">
+                    <h3>I've read...</h3>
+                    <ul>
+                        <li>The Perks of Being a Wallflower</li> 
+                        <li>The Giver (series)</li>
+                        <li>The Great Gatsby</li>
+                        <li>To Kill a Mockingbird</li>
+                        <li>The Curious Incident of the Dog in the Night-Time</li>
+                        <li>and many more...</li>
                         
-                    </ul>
-                </div>
-                <div class="col-sm-4">
-                    <h3>--.</h3>
-                    <ul>
-                        <li></li>
-                    </ul>
-                </div>
-                <div class="col-sm-4">
-                    <h3>--</h3>
-                    <ul>
-                        <li></li>
                     </ul>
                 </div>
             </div>
