completed the canvas sketch section of the website.

--- a/index.html
+++ b/index.html
@@ -105,12 +105,13 @@
     <div class="btn-toolbar pull-right" style="margin-top: 20px;">
     </div>
 
-    <h3><a href="#">.....</a> <small>In Progress - 2019</small></h3>
+    <h3><a href="#">Canvas Sketch</a> <small>In Progress - 2019</small></h3>
     <div class="row project-images">
         <div class="col col-sm-8">
-            <p class="lead">.....</p>
+            <p class="lead">Canvas Sketches in JavaScript.</p>
             <div class="project-summary">
-                <p></p>
+                <p>To improve my animation skill, I thought it would be appropriate to make a new project dedicated to creating animations; animations as in cool, little sketches in JavaScript.
+                I create one animation every week and the first few sketches are nice and easy, but they get more complicated as the project moves on.</p>
 
             </div>
             <p class="project-links">
