--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,17 +11,14 @@
     <link rel="stylesheet" href="./style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico"/>
 </head>
 <body>
 
     <div class="header">
         <h1><a href="/">Dao Nhat Nam</a></h1>
         <p class="lead">
-            <a href="./">Projects</a> &bull;
+            <a href="./index.html">Projects</a> &bull;
             <a href="./about.html">About</a>
         </p>
     </div>
@@ -45,7 +41,7 @@
                         <li>ping pong</li>
                         <li>games</li>
                         <li>eating</li>
-                        <li>cubing</li>                       
+                        <li>cubing</li>
                     </ul>
 
                 </div>
