made hyperlinks more reasonable

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="./index.html">Projects</a> &bull;
             <a href="./about.html">About</a>
         </p>
+        <small>click on image to view project if have pop-ups blocked</small>
     </div>
     <div class="content">
 
@@ -37,7 +38,7 @@
 
             </div>
             <p class="project-links">
-                Links: <a href="https://nhat-nam.github.io/pong-js/">Play</a> &bull; <a href="https://github.com/nhat-nam/pong-js">GitHub</a>
+                Links: <a href="https://nhat-nam.github.io/pong-js/" target="_blank">Play</a> &bull; <a href="https://github.com/nhat-nam/pong-js" target="_blank">GitHub</a>
             </p>
          </div>
         <div class="col col-sm-4">
@@ -62,7 +63,7 @@
 
             </div>
             <p class="project-links">
-                Links: <a href="https://nhat-nam.github.io/flappy-birdy/">Play</a> &bull; <a href="https://github.com/nhat-nam/flappy-birdy">GitHub</a>
+                Links: <a href="https://nhat-nam.github.io/flappy-birdy/" target="_blank">Play</a> &bull; <a href="https://github.com/nhat-nam/flappy-birdy" target="_blank">GitHub</a>
             </p>
          </div>
         <div class="col col-sm-4">
@@ -87,7 +88,7 @@
 
             </div>
             <p class="project-links">
-                Links: <a href="https://nhat-nam.github.io/Shooter-Camera/">Play</a> &bull; <a href="https://github.com/nhat-nam/Shooter-Camera">GitHub</a>
+                Links: <a href="https://nhat-nam.github.io/Shooter-Camera/" target="_blank">Play</a> &bull; <a href="https://github.com/nhat-nam/Shooter-Camera" target="_blank">GitHub</a>
             </p>
          </div>
         <div class="col col-sm-4">
@@ -113,7 +114,7 @@
 
             </div>
             <p class="project-links">
-                Links: <a href="https://nhat-nam.github.io/Sketch-Canvas/">Explore</a> &bull; <a href="https://github.com/nhat-nam/Sketch-Canvas">GitHub</a>
+                Links: <a href="https://nhat-nam.github.io/Sketch-Canvas/" target="_blank">Explore</a> &bull; <a href="https://github.com/nhat-nam/Sketch-Canvas" target="_blank">GitHub</a>
             </p>
          </div>
         <div class="col col-sm-4">
