--- a/about.html
+++ b/about.html
@@ -16,15 +16,16 @@
 <body>
 
     <div class="header">
-        <h1><a href="/">Dao Nhat Nam</a></h1>
+        <h1>Dao Nhat Nam</h1>
         <p class="lead">
-            <a href="./index.html">Projects</a> &bull;
-            <a href="./about.html">About</a>
+          <a href="./index.html">Projects</a> &bull;
+          <a href="./about.html">About</a> &bull;
+          <a href="./extras.html">Extras</a>
         </p>
     </div>
     <div class="content">
 
-<div class="container about">
+<div class="about container">
     <h2>About</h2>
     <div class="row">
         <div class="col-md-8" style="margin-bottom: 20px;">
