--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 <body>
 
     <div class="header">
-        <h1><a href="/">Dao Nhat Nam</a></h1>
+        <h1>Dao Nhat Nam</h1>
         <p class="lead">
             <a href="./index.html">Projects</a> &bull;
-            <a href="./about.html">About</a>
+            <a href="./about.html">About</a> &bull;
+            <a href="./extras.html">Extras</a>
         </p>
         <small>click on image to view project if have pop-ups blocked</small>
     </div>
