--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <h2>About</h2>
     <div class="row">
         <div class="col-md-8" style="margin-bottom: 20px;">
-            <p>Hello! My name is Dao Nhat Nam. I'm an 8th grade student and I study in Hanoi at Sinapore International School. I'm currently living with my parents and my younger brother; I also have an older brother, but he's already studying at the US. This is a small website for me to share my coding pogress and let people know a bit more about me as I prepare to start my own journey abroad.</p>
+            <p>Hello! My name is Dao Nhat Nam. I'm a 9th grade student and I study in St Paul American School Hanoi. I'm currently living with my parents and my younger brother; I also have an older brother who has also experienced the boarding school life at St Mark's. This is a small website for me to share my coding pogress and let people know a bit more about me as I prepare to start my own journey abroad!</p>
             <div class="row">
                 <div class="col-sm-6">
                     <h3>I like...</h3>
@@ -54,6 +54,7 @@
                         <li>The Great Gatsby</li>
                         <li>To Kill a Mockingbird</li>
                         <li>The Curious Incident of the Dog in the Night-Time</li>
+                        <li>7 Habits of Highly Effective People</li>
                         <li>and many more...</li>
 
                     </ul>
