--- a/index.html
+++ b/index.html
@@ -125,6 +125,32 @@
         <div class="clearfix"></div>
     </div>
 </div>
+<hr/>
+
+<div class="project container">
+    <div class="btn-toolbar pull-right" style="margin-top: 20px;">
+    </div>
+
+    <h3><a href="#">FUNiX</a> <small>In Progress - 2020</small></h3>
+    <div class="row project-images">
+        <div class="col col-sm-8">
+            <p class="lead">Online Course</p>
+            <div class="project-summary">
+                <p>After plenty of experience with HTML, I've decided that I want to explore parts of coding I've never dealt with or even heard off before. I signed up for FUNiX, an online, self-paced, awesome course designed by FPT, a networking company in Vietnam, for aspiring coders. With every step I take in the course, I will have to complete graded projects/assignments which I will keep posting here!</p>
+
+            </div>
+            <p class="project-links">
+                Links: <a href="https://nhat-nam.github.io/FUNiX/" target="_blank">Explore</a> &bull; <a href="https://github.com/nhat-nam/FUNiX" target="_blank">GitHub</a>
+            </p>
+         </div>
+        <div class="col col-sm-4">
+            <a href="https://nhat-nam.github.io/flappy-birdy/" class="project-image">
+            <img src="./img/FUNiX/FUNiX-1.png" class="img-responsive center-block"></a>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+</div>
+
 
     </div>
     <div class="footer">
