--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="col col-sm-8">
             <p class="lead">Online Course</p>
             <div class="project-summary">
-                <p>After plenty of experience with HTML, I've decided that I want to explore parts of coding I've never dealt with or even heard off before. I signed up for FUNiX, an online, self-paced, awesome course designed by FPT, a networking company in Vietnam, for aspiring coders. With every step I take in the course, I will have to complete graded projects/assignments which I will keep posting here!</p>
+                <p>After plenty of experience with HTML, I've decided that I want to explore parts of coding I've never dealt with or even heard off before. I signed up for FUNiX, an online, self-paced, awesome course designed by FPT, a networking company in Vietnam, for aspiring coders. With every step I take in the course, I will have to complete graded projects/assignments which I will keep posted here!</p>
 
             </div>
             <p class="project-links">
