update extras with recent brownie attempt

--- a/extras.html
+++ b/extras.html
@@ -22,19 +22,61 @@
           <a href="./about.html">About</a> &bull;
           <a href="./extras.html">Extras</a>
         </p>
+        <small>A blog has been spotted!</small>
     </div>
     <div class="content">
 
-<div class="extras container">
-    <div class="text-center">
-      <h2>What's this?</h2>
-      <p >This is a page that I thought would be interesting to try out. It lets me upload some of my current events in my personal life that I think are worth sharing. I might put books that I'm reading, extra code that I'm working on, or different projects that I'm working on, on here. In a way, this is a blog.</p>
+<div class="project container clearfix">
+    <div class="btn-toolbar pull-right" style="margin-top: 20px;">
     </div>
+
+    <h3><a href="#">Brownies</a> <small>October 2020</small></h3>
+    <div class="row project-images">
+        <div class="col col-sm-6">
+            <p class="lead">My first bake</p>
+            <div class="project-summary">
+                <p>After binging so many <a href="https://www.youtube.com/user/bgfilms">Binging with Babish</a> videos, I experienced a chef's jolt while watching his video on brownies. My inner Gordon Ramsay was done imagining the taste of the brownies on-screen, and I was ready to actually taste the sweet chocolaty dessert. Following Andrew's(the host) <a href="https://basicswithbabish.co/basicsepisodes/brownies">recipe</a>, I bought the ingredients off of <a href="https://abby.vn/">abby.vn</a>, and immediately started once the weekend came.</p>
+            </div>
+        </div>
+        <div class="col-sm-6 padding-0">
+            <iframe width="450" height="240" src="https://www.youtube.com/embed/kDdUdvNQndo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
+
+    <div class="row project-images">
+        <div class="col col-sm-6">
+            <div class="project-summary">
+                <p>In the video, there were 3 different recipes that yielded 3 different brownies. I had birthday money to spare, and I could afford do to whichever recipe I felt like. I ended up going with melty, chewy brownies which were coincidentially the hardest to make!</p>
+                <p>On the fated Saturday morning of October the 3rd, I made my first batch. It was way chunkier than I imagined. The dark brown, almost black, hard crust revealed an even darker inside. Colorwise, this was not appealing. However, the taste was much more important, and they tasted like dry aged brownies. As how dry aging condenses a steak's umami and meattiness, these brownies felt intense and very concentrated. It was definitely melty; you could barely hold it together without a plate. They were also incredibly and somehow uncomfortably rich, to the point that my whole family was able to just grab a few bites, leaving half the brownies still sitting on the parchment paper covered plate. I gave the rest to my neighbors who probably also struggled to eat them.</p>
+            </div>
+        </div>
+        <div class="col-sm-3 padding-0">
+            <img src="./img/extras/brownies/brownie-1.jpg" class="img-responsive center-block"></a>
+            <img src="./img/extras/brownies/brownie-2.jpg" class="img-responsive center-block"></a>
+        </div>
+        <div class="col-sm-3 padding-0">
+            <img src="./img/extras/brownies/brownie-3.jpg" class="img-responsive center-block"></a>
+            <img src="./img/extras/brownies/brownie-4.jpg" class="img-responsive center-block"></a>
+        </div>
+    </div>
+
+    <div class="row project-images">
+        <div class="col col-sm-6">
+            <div class="project-summary">
+                <p>I wasn't willing to go down without a fight, so the week after, I tried again. I realized while watching the brownie video a few more times that the tray Andrew used was much bigger than the one I had, so I halved the recipe. Everything else stayed the same. </p>
+                <p>The result was dry brownies with enclosed melted chocolate bits. There was nothing wrong with them. They were much more edible, but the color was still way too dark, and tasted like any other store bought ones. At that point, I was really confused as to why my brownies didn't come out looking as sexy as the video's. I made sure to follow <b>everything</b> down to a tee. Every Saturday afterwards became brownie day until I had perfected my craft.</p>
+            </div>
+        </div>
+        <div class="col-sm-6 padding-0">
+            <img height=300 src="./img/extras/brownies/brownie-5.jpg"></a>
+        </div>
+    </div>
+
 </div>
-<hr>
+
 <div class="stop-alert container">
     <div class="row align-items-center">
-      <img class="img-responsive center-block" src="./img/work-ahead.png" alt="mypic">
+      <img class="img-responsive center-block" src="./img/extras/work-ahead.png" alt="mypic">
     </div>
 </div>
 
