--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
             <p>The best way to see what I'm up to is to follow me on Github, <a href="https://github.com/nhat-nam">@nhat-nam</a>.</p>
         </div>
         <div class="col-md-4">
-            <img class="img-responsive center-block" src="./img/me.png" alt="mypic">
+            <img class="img-responsive center-block" src="./img/about/me.png" alt="mypic">
         </div>
     </div>
 </div>
