--- a/about.html
+++ b/about.html
@@ -29,20 +29,16 @@
     <h2>About</h2>
     <div class="row">
         <div class="col-md-8" style="margin-bottom: 20px;">
-            <p>Hello! My name is Dao Nhat Nam. I'm a 9th grade student and I study in St Paul American School Hanoi. I'm currently living with my parents and my younger brother; I also have an older brother who has also experienced the boarding school life at St Mark's. This is a small website for me to share my coding pogress and let people know a bit more about me as I prepare to start my own journey abroad!</p>
+            <p>Hello! My name is Dao Nhat Nam. I'm a 10th grade student and I study in St Paul American School Hanoi. I'm currently living with my parents and my younger brother; I also have an older brother who has also experienced the boarding school life at St Mark's. This is a small website for me to share my coding pogress and let people know a bit more about me as I prepare to start my own journey abroad!</p>
             <div class="row">
                 <div class="col-sm-6">
                     <h3>I like...</h3>
                     <ul>
                         <li>coding</li>
                         <li>reading</li>
-                        <li>cardistry</li>
-                        <li>performing magic</li>
-                        <li>Taekwondo</li>
-                        <li>ping pong</li>
-                        <li>games</li>
-                        <li>eating</li>
-                        <li>cubing</li>
+                        <li>martial arts</li>
+                        <li>chess</li>
+                        <li>cooking</li>
                     </ul>
 
                 </div>
@@ -51,10 +47,10 @@
                     <ul>
                         <li>The Perks of Being a Wallflower</li>
                         <li>The Giver (series)</li>
-                        <li>The Great Gatsby</li>
+                        <li>The House of the Scorpion</li>
                         <li>To Kill a Mockingbird</li>
                         <li>The Curious Incident of the Dog in the Night-Time</li>
-                        <li>7 Habits of Highly Effective People</li>
+                        <li>The Outlier</li>
                         <li>and many more...</li>
 
                     </ul>
