--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="btn-toolbar pull-right" style="margin-top: 20px;">
     </div>
 
-    <h3><a href="#">Shooter Camera</a> <small>In Progress - 2019</small></h3>
+    <h3><a href="#">Shooter Camera</a> <small>2019</small></h3>
     <div class="row project-images">
         <div class="col col-sm-8">
             <p class="lead">My own shooter game written in JavaScript.</p>
@@ -105,7 +105,7 @@
     <div class="btn-toolbar pull-right" style="margin-top: 20px;">
     </div>
 
-    <h3><a href="#">Canvas Sketch</a> <small>In Progress - 2019</small></h3>
+    <h3><a href="#">Canvas Sketch</a> <small>2019 - 2020</small></h3>
     <div class="row project-images">
         <div class="col col-sm-8">
             <p class="lead">Canvas Sketches in JavaScript.</p>
