--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <h2>About</h2>
     <div class="row">
         <div class="col-md-8" style="margin-bottom: 20px;">
-            <p>Hello! My name is Dao Nhat Nam. I'm a 10th grade student and I study in St Paul American School Hanoi. I'm currently living with my parents and my younger brother; I also have an older brother who has also experienced the boarding school life at St Mark's. This is a small website for me to share my coding pogress and let people know a bit more about me as I prepare to start my own journey abroad!</p>
+            <p>Hello! My name is Nam. I'm currently a senior at Taft. Please enjoy my past coding projects.</p>
             <div class="row">
                 <div class="col-sm-6">
                     <h3>I like...</h3>
