--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <h2>About</h2>
     <div class="row">
         <div class="col-md-8" style="margin-bottom: 20px;">
-            <p>Hello! My name is Nam. I'm currently a senior at Taft. Please enjoy my past coding projects.</p>
+            <p>Hello! My name is Nam. I'm currently a student at Cornell University. Please enjoy my past coding projects.</p>
             <div class="row">
                 <div class="col-sm-6">
                     <h3>I like...</h3>
@@ -37,7 +37,7 @@
                         <li>coding</li>
                         <li>reading</li>
                         <li>martial arts</li>
-                        <li>chess</li>
+                        <li>filmmaking</li>
                         <li>cooking</li>
                     </ul>
 
@@ -50,14 +50,14 @@
                         <li>The House of the Scorpion</li>
                         <li>To Kill a Mockingbird</li>
                         <li>The Curious Incident of the Dog in the Night-Time</li>
-                        <li>The Outlier</li>
+                        <li>Outliers</li>
                         <li>and many more...</li>
 
                     </ul>
                 </div>
             </div>
             <h3>Contact <i class="fa fa-envelope"></i></h3>
-            <p>You can contact me by email at <a href="mailto:daonhatnam2006@gmail.com">daonhatnam2006@gmail.com</a>.</p>
+            <p>You can contact me by email at <a href="mailto:nhatnamdao@gmail.com">nhatnamdao@gmail.com</a>.</p>
             <h3>Follow my work <i class="fa fa-github"></i></h3>
             <p>The best way to see what I'm up to is to follow me on Github, <a href="https://github.com/nhat-nam">@nhat-nam</a>.</p>
         </div>
